--- a/database_test/db.ipynb
+++ b/database_test/db.ipynb
@@ -2,219 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib as plt"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Body</th>\n",
-       "      <th>Acidity</th>\n",
-       "      <th>Flavor</th>\n",
-       "      <th>Aroma</th>\n",
-       "      <th>Roast</th>\n",
-       "      <th>Roastery</th>\n",
-       "      <th>RoastDate</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Blend</th>\n",
-       "      <th>Sold</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>body1</td>\n",
-       "      <td>acidity5</td>\n",
-       "      <td>flavor2</td>\n",
-       "      <td>aroma3</td>\n",
-       "      <td>light</td>\n",
-       "      <td>roastery1</td>\n",
-       "      <td>2023-02-01</td>\n",
-       "      <td>Columbia</td>\n",
-       "      <td>blend1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>body2</td>\n",
-       "      <td>acidity4</td>\n",
-       "      <td>flavor2</td>\n",
-       "      <td>aroma2</td>\n",
-       "      <td>light</td>\n",
-       "      <td>roastery3</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>Ethiopia</td>\n",
-       "      <td>blend3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>body1</td>\n",
-       "      <td>acidity1</td>\n",
-       "      <td>flavor2</td>\n",
-       "      <td>aroma1</td>\n",
-       "      <td>light</td>\n",
-       "      <td>roastery2</td>\n",
-       "      <td>2023-02-09</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>blend2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>body4</td>\n",
-       "      <td>acidity2</td>\n",
-       "      <td>flavor3</td>\n",
-       "      <td>aroma2</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>roastery1</td>\n",
-       "      <td>2023-02-04</td>\n",
-       "      <td>Columbia</td>\n",
-       "      <td>blend3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>body3</td>\n",
-       "      <td>acidity5</td>\n",
-       "      <td>flavor4</td>\n",
-       "      <td>aroma1</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>roastery5</td>\n",
-       "      <td>2023-02-07</td>\n",
-       "      <td>Honduras</td>\n",
-       "      <td>blend2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>body1</td>\n",
-       "      <td>acidity3</td>\n",
-       "      <td>flavor1</td>\n",
-       "      <td>aroma1</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>roastery5</td>\n",
-       "      <td>2023-01-24</td>\n",
-       "      <td>Honduras</td>\n",
-       "      <td>blend1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>body5</td>\n",
-       "      <td>acidity1</td>\n",
-       "      <td>flavor5</td>\n",
-       "      <td>aroma4</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>roastery3</td>\n",
-       "      <td>2023-01-23</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>blend5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>body2</td>\n",
-       "      <td>acidity4</td>\n",
-       "      <td>flavor3</td>\n",
-       "      <td>aroma4</td>\n",
-       "      <td>dark</td>\n",
-       "      <td>roastery3</td>\n",
-       "      <td>2023-02-02</td>\n",
-       "      <td>Columbia</td>\n",
-       "      <td>blend5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>body3</td>\n",
-       "      <td>acidity2</td>\n",
-       "      <td>flavor4</td>\n",
-       "      <td>aroma5</td>\n",
-       "      <td>dark</td>\n",
-       "      <td>roastery2</td>\n",
-       "      <td>2023-02-03</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>blend4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>body2</td>\n",
-       "      <td>acidity1</td>\n",
-       "      <td>flavor5</td>\n",
-       "      <td>aroma4</td>\n",
-       "      <td>espresso</td>\n",
-       "      <td>roastery3</td>\n",
-       "      <td>2023-02-07</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>blend4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Body   Acidity   Flavor   Aroma     Roast   Roastery   RoastDate  \\\n",
-       "0  body1  acidity5  flavor2  aroma3     light  roastery1  2023-02-01   \n",
-       "1  body2  acidity4  flavor2  aroma2     light  roastery3  2023-01-25   \n",
-       "2  body1  acidity1  flavor2  aroma1     light  roastery2  2023-02-09   \n",
-       "3  body4  acidity2  flavor3  aroma2    medium  roastery1  2023-02-04   \n",
-       "4  body3  acidity5  flavor4  aroma1    medium  roastery5  2023-02-07   \n",
-       "5  body1  acidity3  flavor1  aroma1    medium  roastery5  2023-01-24   \n",
-       "6  body5  acidity1  flavor5  aroma4    medium  roastery3  2023-01-23   \n",
-       "7  body2  acidity4  flavor3  aroma4      dark  roastery3  2023-02-02   \n",
-       "8  body3  acidity2  flavor4  aroma5      dark  roastery2  2023-02-03   \n",
-       "9  body2  acidity1  flavor5  aroma4  espresso  roastery3  2023-02-07   \n",
-       "\n",
-       "    Country   Blend  Sold  \n",
-       "0  Columbia  blend1     0  \n",
-       "1  Ethiopia  blend3     0  \n",
-       "2    Brazil  blend2     0  \n",
-       "3  Columbia  blend3     0  \n",
-       "4  Honduras  blend2     0  \n",
-       "5  Honduras  blend1     0  \n",
-       "6   Vietnam  blend5     0  \n",
-       "7  Columbia  blend5     0  \n",
-       "8    Brazil  blend4     0  \n",
-       "9    Brazil  blend4     0  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"./test.csv\")\n",
     "type(df)\n",
@@ -223,22 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = [\"body6\", \"acidity6\", \"flavor6\", \"aroma6\", \"unroasted\", \"roastery6\", \"2023-02-09\", \"Columbia\", \"blend6\", 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_item(df, features):\n",
     "    df.loc[len(df.index)] = features\n",
     "    df.to_csv(\"test2.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [\"body6\", \"acidity6\", \"flavor6\", \"aroma6\", \"unroasted\", \"roastery6\", \"2023-02-09\", \"Columbia\", \"blend6\", 0]"
    ]
   },
   {
@@ -324,15 +123,6 @@
    "outputs": [],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "klajfkaldjflsdjfljflasfkjsdafljsfdlj"
    ]
   }
  ],
